Fix remaining JDK 8 compilation errors in test files
- IntervalConverterTest: remove Duration.truncatedTo(ChronoUnit.MILLIS) (Java 9+)
- VolumeRetryUtilTest: List.of() → Arrays.asList()
- Slf4jFormatterTest: LogRecord.setInstant() → setMillis() (Java 9+)
- DBFSVolumeClientTest: Files.writeString() → Files.write() (Java 11+)
- VolumeOperationResultTest: Files.writeString() → Files.write(),
  InputStream.readAllBytes() → IOUtils.toByteArray() (Java 9+/11+)

Signed-off-by: samikshya-chand_data <samikshya.chand@databricks.com>